# nested-sharedlib-fun

./: .gitignore  README
circular/: aclocal.m4  config.status  configure  configure.ac  libtool  stuff
circular/lib/: Makefile.am
circular/lib/libcirc0/: Circ0A.cpp  Circ0A.h  Circ0B.cpp  Circ0B.h  Makefile.am
circular/lib/libcirc1/: Circ1A.cpp  Circ1A.h  Makefile.am
circular/lib/libcirc2/: Circ2A.cpp  Circ2A.h  Makefile.am
circular/sh/: fixup-sharedlibs.sh
circular/share/m4/: lpc_xbinder.m4
circular/src/: Makefile.am
circular/src/app1/: Makefile.am  app1  app1.cpp
circular/src/app2/: Makefile.am  app2  app2.cpp
doc/: README
libp1/: CP1.cpp  CP1.h  makelib.sh
proj1/: README  aclocal.m4  config.status  configure  configure.ac  libtool
proj1/lib/: Makefile.am
proj1/lib/libpa/: CPA.cpp  CPA.h  Makefile.am
proj1/lib/libpb/: .Makefile.am.swp  Makefile.am  libpb.h  reader.cpp  rtkey.h  simpleArray.xsd  writer.cpp
proj1/share/m4/: lpc_xbinder.m4  nsfun_rootdir.m4  nsfun_xbinder.m4
proj1/src/: Makefile.am
proj1/src/prog1/: Makefile.am  prog1.cpp
